# solo_robot

solo_control/: CMakeLists.txt  package.xml
solo_control/config/: solo8_group_effort_joint_control.yaml  solo8_group_feedforward_effort_joint_control.yaml  solo8_joint_pos_control.yaml
solo_control/launch/: solo8_group_ff_joints.launch  solo8_group_joints.launch  solo8_joints_pid.launch  solo8_xacro_group_ff_joints.launch  solo8_xacro_joints_pid.launch
solo_description/: CMakeLists.txt  README.MD  package.xml
solo_description/launch/: solo_frezze_gazebo.launch  solo_gazebo.launch  solo_rviz.launch  solo_xacro_gazebo.launch
solo_description/robots/: solo8.urdf.xacro
solo_description/rviz/: solo.rviz
solo_description/urdf/: leg.xacro  plane_with_restitution.urdf.xacro  solo8.urdf.xacro
solo_description/urdf/solo8_leg/: solo8_leg.gazebo.xacro  solo8_leg.transmission.xacro  solo8_leg.urdf copy.xacro  (+1 more)
solo_joint_controllers/: CMakeLists.txt  package.xml  solo_joint_controllers_plugins.xml
solo_joint_controllers/src/: joint_group_feedforward_effort_controller.cpp
solo_mpc_controller/: CMakeLists.txt  package.xml  rcf_joints.xml
solo_mpc_controller/include/solo_mpc_controller/: solo8_centroid_mpc.h
solo_mpc_controller/launch/: solo8_mpc_controller.launch  solo8_mpc_controller_v2.launch  solo8_mpc_controller_v3.launch  solo8_mpc_controller_v4.launch
solo_mpc_controller/scripts/: mpc_reference_setpoint.py
solo_mpc_controller/src/: solo8_centroid_mpc.cpp  solo8_centroid_mpc_node.cpp  solo8_jacobians.cpp
solo_mpc_controller/src/osqp-eigen/: CMakeLists.txt
solo_mpc_controller/src/osqp-eigen/cmake/: OsqpEigenDependencies.cmake
(+2 files in other folders)
